# emojis

./: LICENSE  Makefile  README.md  changelog.md  emoji.json  emojis.cabal  update.hs
.github/workflows/: ci.yml
src/: Trie.hs
src/Text/: Emoji.hs  emojis.inc
src/Text/Emoji/: TH.hs
test/: test.hs
