name:                emojis
version:             0.1.4
synopsis:            Conversion between emoji characters and their names.
description:         This package provides functions for converting
                     emoji names to emoji characters and vice versa.
                     .
                     How does it differ from the @emoji@ package?
                     .
                     -   It supports a fuller range of emojis, including all those
                         supported by GitHub
                     -   It supports lookup of emoji aliases from emoji
                     -   It uses Text rather than String
                     -   It has a lighter dependency footprint: in particular, it
                         does not require aeson
                     -   It does not require TemplateHaskell
homepage:            https://github.com/jgm/emojis#readme
license:             BSD3
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
copyright:           2019 John MacFarlane
category:            Text
build-type:          Simple
extra-source-files:  emoji.json, src/Text/emojis.inc, README.md, changelog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Emoji
  other-modules:       Trie
  build-depends:       base >= 4.13 && < 5,
                       text,
                       containers
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

test-suite emojis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base >= 4.9 && < 5,
                       emojis,
                       text,
                       HUnit
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

source-repository head
  type:     git
  location: https://github.com/jgm/emojis
